HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeNestedKeyBlock/Expected.uv
//! Expected diagnostic metadata for the SpeculativeNestedKeyBlock rejected-source specimen.

expectedDiagnostic("E-CON-0090", "diagnostics.19.SpeculativeExecution")
